Pushing website changes to github

--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
-<html>
+<html itemscope itemtype="http://schema.org/Organization">
 <head>
+<meta itemprop="name" content="Belenix - innovating on Illumos">
+<meta itemprop="description" content="Belenix is an innovative distro based on the Illumos kernel, with a focus on stability, speed, and customizability.">
+<meta itemprop="image" content="http://www.belenix.org/images/Belenix_logo.png">
+
 <title>
 Belenix - innovating on illumos
 </title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-29890000-1']);
+  _gaq.push(['_setDomainName', 'belenix.org']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
 </head>
 <body>
 <center>
 <img src="images/Belenix_logo.png">
 <br>
+
 After several years of serving the opensolaris community, genunix.org has been retired. 
 <br>
 We are very grateful to Al Hopper for all the support that he has provided to the overall opensolaris community over the years.
@@ -25,6 +45,7 @@ Over the next few weeks, we will be rebuilding the belenix website and online pr
 Twitter: <a href="http://www.twitter.com/belenix">@belenix</a>
 <br>
 <br>
+
 <a href="https://github.com/belenix/belenix-website">Website source code at github </a>
 <br>
 <br>
@@ -33,7 +54,30 @@ Twitter: <a href="http://www.twitter.com/belenix">@belenix</a>
 <br>
 <a href="http://mail.opensolaris.org/pipermail/belenix-dev/">Belenix Development Discussions </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(<a href="http://mail.opensolaris.org/mailman/listinfo/belenix-dev"> Signup</a>)
 </center>
+<br>
 
+<br>
+<center> 
+<g:plusone annotation="inline"></g:plusone>
+
+<!-- Place this render call where appropriate -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
+<a href="http://www.reddit.com/submit" onclick="window.location = 'http://www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false"> <img src="http://www.reddit.com/static/spreddit7.gif" alt="submit to reddit" border="0" /> </a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://twitter.com/share" class="twitter-share-button" data-text="Belenix is an innovative distro based on the Illumos kernel, with a focus on stability, speed, and customizability." data-hashtags="belenix">Tell others</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://twitter.com/belenix" class="twitter-follow-button" data-show-count="false">Follow @belenix</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</center>
 
 </body>
 </html>
+
