--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ Belenix - innovating on illumos
 <img src="images/Belenix_logo.png">
 <br>
 
+We're now hosted at Github.
+
 After several years of serving the opensolaris community, genunix.org has been retired. 
 <br>
 We are very grateful to Al Hopper for all the support that he has provided to the overall opensolaris community over the years.
@@ -36,23 +38,23 @@ Al continues to support the Belenix project by way of technical advice, for whic
 <br>
 <br>
 <br>
-Thanks to support from a member of the Belenix community, Michael Kosarev, the Belenix project website has a new home.
+We also want to thank Michael Kosarev, a member of the Belenix community, who had earlier donated hardware for the Belenix project.
 <br>
 <br>
-Over the next few weeks, we will be rebuilding the belenix website and online presence. All discussions will happen on the belenix-discuss mailing list, and all community participation is welcome.
+Over the next few weeks, we will be rebuilding the belenix website and online presence. As we figure out our mailing groups, set up a mediawiki based website, etc, we'll keep this page updated.
 <br>
 <br>
 Twitter: <a href="http://www.twitter.com/belenix">@belenix</a>
 <br>
 <br>
 
-<a href="https://github.com/belenix/belenix-website">Website source code at github </a>
+<a href="https://github.com/belenix/belenix.github.com">Website source code at github </a>
 <br>
 <br>
-<a href="http://mail.opensolaris.org/pipermail/belenix-discuss/">Belenix General Discussions </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(<a href="http://mail.opensolaris.org/mailman/listinfo/belenix-discuss">Signup</a>)
+<a href="http://www.mail-archive.com/belenix-discuss@opensolaris.org/">Archives of Belenix General Discussions </a>
 <br>
 <br>
-<a href="http://mail.opensolaris.org/pipermail/belenix-dev/">Belenix Development Discussions </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(<a href="http://mail.opensolaris.org/mailman/listinfo/belenix-dev"> Signup</a>)
+<a href="http://www.mail-archive.com/belenix-dev@opensolaris.org/">Archives of Belenix Development Discussions </a>
 </center>
 <br>
 
