--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@ Twitter: <a href="http://www.twitter.com/belenix">@belenix</a>
 <br>
 <br>
 
+Email: sriram at belenix dot org
+<br>
+
+<br>
+
 <a href="https://github.com/belenix/belenix.github.com">Website source code at github </a>
 <br>
 <br>
