Added a link to the Belenix project planning page at Trello

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@ We're now hosted at Github.
 Over the next few weeks, we will be rebuilding the belenix website and online presence. As we figure out our mailing groups, set up a mediawiki based website, etc, we'll keep this page updated.
 <br>
 <br>
+Meanwhile, you can track our <a href="http://trello.com/belenix">project planning and progress</a>.
+<br>
+<br>
+
 Twitter: <a href="http://www.twitter.com/belenix">@belenix</a>
 <br>
 <br>
