Changed some text + edited some content to get everything in one page without any scroll bars

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@ Email: sriram at belenix dot org
 <br>
 <br>
 <a href="http://www.mail-archive.com/belenix-discuss@opensolaris.org/">Archives of Belenix General Discussions </a>
-<br>
-<br>
+&nbsp; &nbsp; &nbsp;
 <a href="http://www.mail-archive.com/belenix-dev@opensolaris.org/">Archives of Belenix Development Discussions </a>
 
 </br>
@@ -61,16 +60,13 @@ Email: sriram at belenix dot org
 
 After several years of serving the opensolaris community, genunix.org has been retired. 
 <br>
-We are very grateful to Al Hopper for all the support that he has provided to the overall opensolaris community over the years.
+We are very grateful to Al Hopper for all the support that he has provided to the overall opensolaris community over the years via genunix.org.
 Al continues to support the Belenix project by way of technical advice, for which the Belenix community is grateful.
-<br>
 <br>
 <br>
 We also want to thank Michael Kosarev, a member of the Belenix community, who had earlier donated hardware for the Belenix project.
 <br>
 </center>
-<br>
-
 <br>
 <center> 
 <g:plusone annotation="inline"></g:plusone>
